<resources>
    <string name="app_name">A Walking School bus</string>
    <string name="name_colon">Name: </string>
    <string name="members_colon">Members: </string>
    <string name="description_colon">Description: </string>
    <string name="destination_colon">Destination:</string>
    <string name="meeting_colon">Meeting: </string>
    <string name="leader_colon">Leader: </string>
    <string name="destination">Destination</string>
    <string name="meeting">Meeting</string>
    <string name="group_name">GroupName</string>
    <string name="group_description">GroupDescription</string>
    <string name="cancel">Cancel</string>
    <string name="create_group">Create Group</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="map_api_key">AIzaSyBjWnTojaIlgU7XUYoLdpIGz9xQjNGmZCI</string>
    <string name="google_maps_api_key">AIzaSyBjWnTojaIlgU7XUYoLdpIGz9xQjNGmZCI</string>
    <string name="switch_to_groupView">Group View</string>
    <string name="switch_to_mapView">Map View</string>
    <string name="switch_to_logout">Logout</string>
    <string name="switch_to_monitoring">Monitor View</string>
    <string name="enter_an_address">Enter an Address</string>
    <string name="ask_user_search">Please Enter a Location</string>
    <string name="map_switch">Switch to map</string>
    <string name="title_activity_login">Login</string>
    <string name="help_user">Help</string>
    <string name="add_location">Add a meeting spot</string>
    <string name="get_nearby">See nearby location (NOT MEETING SPOTS)</string>
    <string name="get_info">Get info of the marked location</string>
    <string name="get_current_location">Goes to your current position and marks it</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="api_key">394ECE0B-5BF9-41C4-B9F6-261B0678ED23</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hitting_back_button_on_phone_will_go_to_main_menu">Hitting back button on phone will go
                                                    to main menu. Hold the item on the list to delete it</string>
    <string name="search_the_group_by_description">Search the group by description</string>
    <string name="search_for_a_description">Search for a description</string>
    <string name="back">Back</string>
    <string name="press_and_hold_item_for_delete_pop_up">Press and Hold Item for delete pop-up</string>
    <string name="add_a_student_to_monitor">Add a student to monitor</string>
    <string name="add_someone_to_monitor_you">Add someone to monitor you</string>
    <string name="see_who_s_monitoring_you">See who\'s monitoring you</string>
    <string name="go_back">Go Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="message">Messages: </string>
    <string name="messageTextView">Message: </string>
    <string name="from_text">From: </string>
    <string name="panic">PANIC!</string>
    <string name="messageDescription">Send a message to all parents and those who monitor you</string>
    <string name="sendMessageToGroup">Send a message a group you lead</string>
    <string name="edit_info">Edit Info</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="monitors_colon">Monitors:</string>
    <string name="start_walking">Start Walking!</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="resume_tracking">Resume Tracking</string>
    <string name="tracking_mode">Tracking Mode:</string>
    <string name="trueStatement">True</string>
    <string name="falseStatement">False</string>
    <string name="timestamp">TimeStamp:</string>
    <string name="parent_dashboard">Parent Dashboard</string>
    <string name="messenger">Messenger</string>
    <string name="filter">Filter</string>
    <string name="inbox">inbox</string>
    <string name="refresh">Refresh</string>
    <string name="pick_a_location_to_walk_to">Pick a location to walk to</string>
    <string name="your_points">Your Points:</string>
    <string name="buy_nicknames">Buy Nicknames</string>
    <string name="buy_icons">Buy Icons</string>
    <string name="your_own_title">Buy Custom Nickname</string>
    <string name="shop">Shop</string>
    <string name="quiz">Quiz</string>
    <string name="lead">Lead</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="requests">Requests</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="tap_me_to_look_for_cooler_names">Switch List</string>
</resources>
