<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="groupdenim.cmpt276.awalkingschoolbus.MainMenuActivity">

    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:text="@string/switch_to_mapView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/btn_monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/switch_to_monitoring"
        app:layout_constraintStart_toStartOf="@+id/btnMap"
        app:layout_constraintTop_toBottomOf="@+id/btnMap" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/switch_to_logout"
        app:layout_constraintStart_toStartOf="@+id/btn_monitor"
        app:layout_constraintTop_toBottomOf="@+id/btn_monitor" />

    <Button
        android:id="@+id/temp_button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="Group Info"
        app:layout_constraintStart_toStartOf="@+id/btnLogout"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

    <Button
        android:id="@+id/temp_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="Create group"
        app:layout_constraintStart_toStartOf="@+id/temp_button_info"
        app:layout_constraintTop_toBottomOf="@+id/temp_button_info" />
</android.support.constraint.ConstraintLayout>
