<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="groupdenim.cmpt276.awalkingschoolbus.fragments.HelpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/addLocPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_okhelp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:srcCompat="@drawable/ic_addmeetingspot" />

        <ImageView
            android:id="@+id/getCurrentLocationPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/getInfoPic"
            android:layout_alignStart="@+id/getInfoPic"
            android:layout_below="@+id/getInfoPic"
            app:srcCompat="@drawable/ic_gps" />

        <ImageView
            android:id="@+id/getInfoPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/getNearbyPlacesPic"
            android:layout_alignStart="@+id/getNearbyPlacesPic"
            android:layout_below="@+id/getNearbyPlacesPic"
            app:srcCompat="@drawable/ic_info" />

        <ImageView
            android:id="@+id/getNearbyPlacesPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/addLocPic"
            android:layout_alignStart="@+id/addLocPic"
            android:layout_below="@+id/addLocPic"
            app:srcCompat="@drawable/ic_nearby" />

        <TextView
            android:id="@+id/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_okhelp"
            android:layout_toEndOf="@+id/addLocPic"
            android:layout_toRightOf="@+id/addLocPic"
            android:text="@string/add_location" />

        <TextView
            android:id="@+id/getNearbyPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addLocPic"
            android:layout_toEndOf="@+id/getNearbyPlacesPic"
            android:layout_toRightOf="@+id/getNearbyPlacesPic"
            android:text="@string/get_nearby" />

        <TextView
            android:id="@+id/getCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getNearbyPlacesPic"
            android:layout_toEndOf="@+id/getInfoPic"
            android:layout_toRightOf="@+id/getInfoPic"
            android:text="@string/get_info" />

        <TextView
            android:id="@+id/getCurrentLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getInfoPic"
            android:layout_toEndOf="@+id/getCurrentLocationPic"
            android:layout_toRightOf="@+id/getCurrentLocationPic"
            android:text="@string/get_current_location" />

        <Button
            android:id="@+id/btn_okhelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@android:string/ok" />

    </RelativeLayout>



</RelativeLayout>
