<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_group_switch"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/btn_group_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/switch_to_groupView" />

    <Button
        android:id="@+id/btn_map_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/switch_to_mapView" />

    <RelativeLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_group_switch"
        android:background="@drawable/white_border"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_magnifying_glass" />

        <AutoCompleteTextView
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ic_magnify"
            android:layout_toRightOf="@+id/ic_magnify"
            android:background="@null"
            android:hint="@string/ask_user_search"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp"
            android:inputType="text"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_gps"/>

    <ImageView
        android:id="@+id/ic_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_info"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/ic_nearby"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_nearby"
        android:visibility="visible" />
</RelativeLayout>